--- a/index.html
+++ b/index.html
@@ -185,7 +185,10 @@
         <div class="EmailMobileCTA">
           <a href="#emailSubmit">Join the waitlist ➜</a>
         </div>
-        <a class="emailDiss" href="#faq"
+        <a class="emailDiss emailDissPc" href="#faq"
+          >What is Kraya ? <i class="bx bx-right-arrow-alt"></i
+        ></a>
+        <a class="emailDiss emailDissMob" href="#faqMobile"
           >What is Kraya ? <i class="bx bx-right-arrow-alt"></i
         ></a>
       </div>
@@ -273,11 +276,11 @@
       </div>
       <div class="faqCTA">
         <p>Sell smarter, with Kraya</p>
-        <a href=".#emailSubmit">Join the waitlist ➜</a>
+        <a href="#emailSubmit">Join the waitlist ➜</a>
       </div>
     </div>
 
-    <div class="faqMobile">
+    <div class="faqMobile" id="faqMobile">
       <img src="assets/imgs/que.png" />
       <h1>Frequently Asked Questions</h1>
       <hr class="rounded" />
@@ -300,36 +303,34 @@
           <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Kraya helps social sellers and small businesses to boost their sales
-          through the power of social media. Our app makes it easy for social
-          sellers to create and manage their online storefronts, connect with
-          customers, and track their sales and analytics all in one place.
+          Being the best is what it takes to burst that damn bubbles! At Kraya,
+          social sellers are who we work for and do our bit to get things moving
+          for them with ease.
         </div>
       </div>
       <hr class="rounded" />
       <div class="mobfaqs">
         <div class="mobFaqQues">
-          <h2>How will things work ?</h2>
+          <h2>Problem of social sellers Kraya is solving for?</h2>
           <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Kraya helps social sellers and small businesses to boost their sales
-          through the power of social media. Our app makes it easy for social
-          sellers to create and manage their online storefronts, connect with
-          customers, and track their sales and analytics all in one place.
+          The problems that we are solving for social sellers are as follows:
+          Very long customer buying journey, a lot of 1. back and forth in the
+          DMs. Spamming by people who are not interested 2. in your products.
+          Scams happening in this area as the only 3. source of connection is
+          through DMs.
         </div>
       </div>
       <hr class="rounded" />
       <div class="mobfaqs">
         <div class="mobFaqQues">
-          <h2>How will things work ?</h2>
+          <h2>What is the vision of Kraya?</h2>
           <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Kraya helps social sellers and small businesses to boost their sales
-          through the power of social media. Our app makes it easy for social
-          sellers to create and manage their online storefronts, connect with
-          customers, and track their sales and analytics all in one place.
+          The vision of Kraya is to change the way people  buy and sell things
+          online, and redifine ecommerce “The Kraya Way!”
         </div>
       </div>
       <hr class="rounded" />
