contact us title+favicon

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,8 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Contact Us</title>
+    <title>Kraya-Contact</title>
+    <link rel="icon" href="./assets/imgs/logo.png" type="image/x-icon" />
   </head>
   <body>
     <h1>Contact Us</h1>
@@ -51,10 +52,7 @@
       <div class="circle2"></div>
     </div>
     <div class="Contactform">
-      <form
-        action="https://formsubmit.co/support@kraya.shop"
-        method="POST"
-      >
+      <form action="https://formsubmit.co/support@kraya.shop" method="POST">
         <div class="input-field">
           <input
             id="first_name"
