--- a/index.html
+++ b/index.html
@@ -365,6 +365,13 @@
         </div>
       </div>
     </div>
+    <div class="author">
+      <span>
+        Developed By <a href="#">Adarsh Jena</a> |
+        <span class="far fa-copyright"></span> © 2023 Kraya India , All rights
+        reserved.
+      </span>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
