link updated author

--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
     </div>
     <div class="author">
       <span>
-        Developed By <a href="#">Adarsh Jena</a> |
+        Developed By
+        <a href="http://adarshjena.in" target="_blank">Adarsh Jena</a> |
         <span class="far fa-copyright"></span> © 2023 Kraya India , All rights
         reserved.
       </span>
