--- a/index.html
+++ b/index.html
@@ -302,11 +302,19 @@
       </div>
       <div class="mobFaqAns">
         The problems that we are solving for social sellers are as follows:
-        1. Very long customer buying journey, a lot of back and forth in the
-        DMs.
-        2. Spamming by people who are not interested in your products.
-        3. Scams happening in this area as the only source of connection is
-        through DMs.
+        <ol>
+          <li>
+            Very long customer buying journey, a lot of back and forth in the
+            DMs.
+          </li>
+          <li>
+            Spamming by people who are not interested in your products.
+          </li>
+          <li>
+            Scams happening in this area as the only source of connection is
+            through DMs.
+          </li>
+        </ol>
       </div>
     </div>
     <hr class="rounded" />
