--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </div>
     <div>
       <i class="bx bxs-envelope"></i>
-      <p>support@kraya.shop</p>
+      <p>krayashop11@gmail.com</p>
     </div>
     <div>
       <i class="bx bx-current-location"></i>
@@ -47,7 +47,7 @@
     <div class="circle2"></div>
   </div>
   <div class="Contactform">
-    <form action="https://formsubmit.co/support@kraya.shop" method="POST">
+    <form action="https://formsubmit.co/krayashop11@gmail.com" method="POST">
       <div class="input-field">
         <input id="first_name" type="text" class="validate" name="first_name" />
         <label for="first_name">First Name</label>
