--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   <div class="footer">
     <div class="contactUs">
       <h2>Contact Us</h2>
-      <form action="https://formsubmit.co/support@kraya.shop" method="POST">
+      <form action="https://formsubmit.co/krayashop11@gmail.com" method="POST">
         <input type="text" placeholder="Name" name="name" />
         <input type="email" placeholder="Email" name="email" />
         <textarea cols="30" rows="10" placeholder="Message.." name="message" required></textarea>
