updated contact and social links

--- a/index.html
+++ b/index.html
@@ -345,12 +345,11 @@
       <img class="footerlogo" src="assets/imgs/KrayaLogo.png" />
       <div>
         <div>
-          <img src="assets/imgs/facebook.png" />
-          <img src="assets/imgs/instagram.png" />
-          <img src="assets/imgs/twitter.png" />
-          <img src="assets/imgs/youtube.png" />
+          <a href="https://www.instagram.com/krayadotshop/"><img src="assets/imgs/instagram.png" /></a>
+          <a href="https://www.facebook.com/profile.php?id=100090694372072"><img src="assets/imgs/facebook.png" /></a>
+
         </div>
-        <p>sharmaayush41913@gmail.com</p>
+        <p>krayashop11@gmail.com</p>
       </div>
     </div>
   </div>
