--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <h1>You only hear from us when it matters.</h1>
         <img src="assets/imgs/ear.png" />
       </div>
-      <form class="emailSubmitForm" action="https://formsubmit.co/support@kraya.shop" method="POST">
+      <form class="emailSubmitForm" action="https://formsubmit.co/krayashop11@gmail.com" method="POST">
         <input type="email" placeholder="Enter Id" name="email" />
         <input type="text" placeholder="Name" name="name" />
         <button type="submit">Submit ➜</button>
@@ -208,7 +208,7 @@
       Elevate your social selling game with Kraya. Streamline your social
       selling process and increase sales with our user-friendly ecommerce app.
     </p>
-    <form class="mobEmailSubmitForm" action="https://formsubmit.co/support@kraya.shop" method="POST">
+    <form class="mobEmailSubmitForm" action="https://formsubmit.co/krayashop11@gmail.com" method="POST">
       <input type="email" placeholder="Enter Id" name="email" />
       <input type="text" placeholder="Name" name="name" />
       <button type="submit">Submit ➜</button>
